# zomato-ai-recommender

./: .env.example  .gitignore  README.md  phased-architecture.md  pyproject.toml  render.yaml  streamlit_app.py
data/: restaurants.json
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EmptyState.tsx  MouseGlow.tsx  PreferenceForm.tsx  ResultCard.tsx  ResultsList.tsx  SourceBadge.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
src/milestone1/: __init__.py
src/milestone1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/milestone1/phase0/: __init__.py  cli.py  doctor.py  paths.py  settings.py
src/milestone1/phase1_ingestion/: __init__.py  loader.py  models.py  normalizer.py
src/milestone1/phase2_preferences/: __init__.py  cities.py  models.py  parser.py
src/milestone1/phase3_integration/: __init__.py  filter.py  output.py  prompt.py
src/milestone1/phase4_llm/: __init__.py  client.py  models.py  recommend.py
src/milestone1/phase5_output/: __init__.py  empty_states.py  renderer.py  telemetry.py
src/milestone1/phase6_api/: __init__.py  app.py  corpus.py  schemas.py
src/milestone1/phase9_streamlit/: __init__.py  app.py
tests/: test_phase1_normalizer.py  test_phase2_preferences.py  test_phase3_filter.py  test_phase4_llm.py  test_phase6_api.py
